# keepassxc-cli-integration

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
keepassxc_cli_integration/: kpx.py  kpx_cmd.py
keepassxc_cli_integration/backend/: autorization.py  cmdargs.py  dep.py  kpx_protocol.py  queries.py  run_command.py  string_query.py  utils.py
keepassxc_cli_integration/backend/kpx_protocol/: __init__.py  classes.py  classes_requests.py  classes_responses.py  connection_config.py  kpx_protocol.py
kpx/: kpx_cmd.py  main.py
kpx/backend/: autorization.py  cmdargs.py  dep.py  kpx_protocol.py  modules.py  queries.py  utils.py
src/keepassxc_cli_integration/: __init__.py  kpx.py  kpx_cmd.py
src/keepassxc_cli_integration/backend/: __init__.py  constants.py  legacy.py  old_modules.py  queries.py  run_command.py  settings.py  string_query.py  utils.py
src/keepassxc_cli_integration/backend/kpx_protocol/: __init__.py  classes.py  classes_responses.py  kpx_protocol.py
